--- a/mirco-web/vue3-project/package.json
+++ b/mirco-web/vue3-project/package.json
@@ -7,11 +7,14 @@
     "serve": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.2.6"
+    "vue": "^3.2.6",
+    "vue-router": "4",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^1.6.0",
     "@vue/compiler-sfc": "^3.0.5",
+    "sass": "^1.38.2",
     "typescript": "^4.3.2",
     "vite": "^2.5.1",
     "vue-tsc": "^0.2.2"
